==> elua/elua/src/platform/lpc24xx/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "utils.h"
#include "common.h"
#include "elua_adc.h"
#include "platform_conf.h"
#include "buf.h"
#include "elua_int.h"
#include "arm_constants.h"
#include "LPC23xx.h"                        /* LPC23xx/24xx definitions */
#include "target.h"
#include "irq.h"
#include "uart.h"

int platform_init()
{
  // Complete CPU initialization
  platform_setup_cpu();

  // External memory
  platform_setup_extmem();   

  // Setup peripherals
  platform_setup_timers();
  platform_setup_pwm();
  
#ifdef BUILD_ADC
  // Setup ADCs
  platform_setup_adcs();
#endif

  // Common platform initialization code
  cmn_platform_init();

  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1;
  PREG FIOxDIR = ( PREG )pio_fiodir[ port ];
  PREG FIOxPIN = ( PREG )pio_fiopin[ port ];
  PREG FIOxSET = ( PREG )pio_fioset[ port ];
  PREG FIOxCLR = ( PREG )pio_fioclr[ port ];
  PREG PINxMODE0 = ( PREG )pio_pinmode[ port * 2 ];
  PREG PINxMODE1 = ( PREG )pio_pinmode[ port * 2 + 1 ];
  u32 mask;
   
  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:   
      *FIOxPIN = pinmask;
      break;
      
    case PLATFORM_IO_PIN_SET:
      *FIOxSET = pinmask;
      break;
      
    case PLATFORM_IO_PIN_CLEAR:
      *FIOxCLR = pinmask;
      break;
      
    case PLATFORM_IO_PORT_DIR_OUTPUT:
      *FIOxDIR = 0xFFFFFFFF;
      break;    

    case PLATFORM_IO_PIN_DIR_OUTPUT:
      *FIOxDIR |= pinmask;
      break;
      
    case PLATFORM_IO_PORT_DIR_INPUT:
      *FIOxDIR = 0;
      break;

    case PLATFORM_IO_PIN_DIR_INPUT:
      *FIOxDIR &= ~pinmask;
      break;    
            
    case PLATFORM_IO_PORT_GET_VALUE:
      retval = *FIOxPIN;
      break;
      
    case PLATFORM_IO_PIN_GET:
      retval =( *FIOxPIN & pinmask ) ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to set pullups on specified pin(s).\n" );
      else
      {
        for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = *PINxMODE0 & ~( 3 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = *PINxMODE1 & ~( 3 << ( mask * 2 ) );
      }
      break;

    case PLATFORM_IO_PIN_PULLDOWN:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to set pulldowns on specified pin(s).\n" );
      else
      {
         for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = ( *PINxMODE0 & ~( 3 << ( mask * 2 ) ) ) | ( 3 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = ( *PINxMODE1 & ~( 3 << ( mask * 2 ) ) ) | ( 3 << ( mask * 2 ) );
      }
      break;

    case PLATFORM_IO_PIN_NOPULL:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to reset pullups/pulldowns on specified pin(s).\n" );
      else
      {
        for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = ( *PINxMODE0 & ~( 3 << ( mask * 2 ) ) ) | ( 2 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = ( *PINxMODE1 & ~( 3 << ( mask * 2 ) ) ) | ( 2 << ( mask * 2 ) );
      }
      break;
      
    default:
      retval = 0;
      break;
  }
  return retval;
}

void platform_s_uart_send( unsigned id, u8 data )
{
  PREG UxTHR = ( PREG )uart_thr[ id ];
  PREG UxLSR = ( PREG )uart_lsr[ id ];
  
  while( ( *UxLSR & LSR_THRE ) == 0 );
  *UxTHR = data;
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  PREG UxLSR = ( PREG )uart_lsr[ id ];
  PREG UxRBR = ( PREG )uart_rbr[ id ];

  if( timeout == 0 )
  {
    // Return data only if already available
    if( *UxLSR & LSR_RDR )
      return *UxRBR;
    else
      return -1;
  }
  else
    while( ( *UxLSR & LSR_RDR ) == 0 );
  return *UxRBR;
}
