==> elua/elua/src/platform/xmc4000/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "utils.h"
#include "common.h"
#include "platform_conf.h"
#include "dwt.h"
#include "DAVE.h"
# include "XMC4500.h"
# include "XMC4700.h"
# include "XMC4300.h"
#include "xmc_dac.h"

int platform_init()
{
  DAVE_Init();

  cmn_platform_init();

  /* Initialize the EBU if we're using the XMC45 SDRAM kit */
#if defined ( XMC4500_E144x1024 )
  ebu_main();
#endif

  /* DAC */
  dacs_init();

  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1;
  XMC_GPIO_PORT_t *base = pio_port[ port ];

  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:
      base->OUT = pinmask;
      break;

    case PLATFORM_IO_PIN_SET:
      base->OMR = pinmask;
      break;

    case PLATFORM_IO_PIN_CLEAR:
      base->OMR = pinmask << 16;
      break;

    case PLATFORM_IO_PORT_DIR_INPUT:
      base->IOCR[ 0 ] = base->IOCR[ 1 ] = 0;
      base->IOCR[ 2 ] = base->IOCR[ 3 ] = 0;
      break;

    case PLATFORM_IO_PIN_DIR_INPUT:
    case PLATFORM_IO_PIN_NOPULL:
      platformh_setup_pins( port, pinmask, 0 );
      break;

    case PLATFORM_IO_PORT_DIR_OUTPUT:
      base->IOCR[ 0 ] = base->IOCR[ 1 ] = 0x80808080;
      base->IOCR[ 2 ] = base->IOCR[ 3 ] = 0x80808080;
      break;

    case PLATFORM_IO_PIN_DIR_OUTPUT:
      platformh_setup_pins( port, pinmask, 0x80 );
      break;

    case PLATFORM_IO_PORT_GET_VALUE:
      retval = base->IN;
      break;

    case PLATFORM_IO_PIN_GET:
      retval = ( base->IN & pinmask ) ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
      platformh_setup_pins( port, pinmask, 0x10 );
      break;

    case PLATFORM_IO_PIN_PULLDOWN:
      platformh_setup_pins( port, pinmask, 0x08 );
      break;

    default:
      retval = 0;
      break;
  }
  return retval;
}

void platform_s_uart_send( unsigned id, u8 data )
{
  // Internally invokes DMA for transmit
  UART_Transmit( &UART_0, &data, 1 );
  while( UART_0.runtime->tx_busy );
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  // Internally invokes DMA for receive
  UART_Receive( &UART_0, &recv_byte, 1 );
  while( UART_0.runtime->rx_busy );
  return recv_byte;
}
